# wardrobe

./: .dockerignore  .env_example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  thermometer.py  wardrobe.py
app/: main.py  server.py  ui.py
scripts/: daily_recommendation.py  daily_wardrobe_brief.py  main.py
shiny_app/: app.py
shortcuts/: deploy.sh  runner.py
src/: app.py  automation.py  config.py  server.py  settings.py  ui.py
src/automations/: daily_brief.py
src/config/: default.yaml
src/core/: apple_ai.py  stylist.py  thermometer.py  wardrobe.py
src/models/: thermometer.py  wardrobe_recommender.py
src/templates/: daily_brief.html  wardrobe.css
src/utils/: email.py  template.py
tests/: test_test.py
tests/core/: test_thermometer.py
