[project]
name = "Wardrobe"
version = "1.0.0"
description = "A personal clothing management app to organize, track, and plan your outfits"

readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "requests",
  "python-dotenv",
  "shiny",
  "jinja2"
]

[project.optional-dependencies]
dev = [
  "pytest",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "shiny_app*", "shortcuts*"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
pythonpath = ["."]
testpaths = ["tests"]
